cloud-controller/aws/ecs/validate-ecs-task-definition-user-for-host-mode-check/validate-ecs-task-definition-user-for-host-mode-check.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-task-definition-user-for-host-mode-check
  annotations:
    policies.kyverno.io/title: Validate ECS Task Definition User for Host Mode
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This policy ensures that ECS task definitions avoid using the root user for the host network mode when privileged is set to false or is not specified. 
      In scenarios where tasks employ the `host` network mode, it's crucial to avoid running containers with the root user (UID 0) for enhanced security. 
      As a recommended security practice, it is recommended to opt for a non-root user.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  matchConditions:
    - name: match-create-update
      expression: >
        request.operation in ['CREATE', 'UPDATE']
    - name: aws-ecs-taskdefinition
      expression: >
        object.TypeName == 'AWS::ECS::TaskDefinition'
  validations:
    - expression: >
        has(object.ResourceDescription) ?
        (
          has(object.ResourceDescription.Properties) &&
          has(object.ResourceDescription.Properties.containerDefinitions) &&
          object.ResourceDescription.Properties.containerDefinitions.all(container,
            has(container.privileged) && container.privileged == true ||
            (
              (!has(container.privileged) || container.privileged == false) &&
              has(container.user) && 
              container.user != null && 
              container.user != 'root' && 
              container.user != '0' && 
              !container.user.startsWith('0:') && 
              !container.user.endsWith(':0')
            )
          )
        ) :
        (
          has(object.containerDefinitions) &&
          object.containerDefinitions.all(container,
            has(container.privileged) && container.privileged == true ||
            (
              (!has(container.privileged) || container.privileged == false) &&
              has(container.user) && 
              container.user != null && 
              container.user != 'root' && 
              container.user != '0' && 
              !container.user.startsWith('0:') && 
              !container.user.endsWith(':0')
            )
          )
        )
      message: "User should be set to a non-root user when NetworkMode is set to host and privileged is set to false or not specified"
